[tool.poetry]
name = "python-gdal-geotiff"
version = "0.1.0"
description = ""
authors = ["Milo Mordaunt <milomord@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
GDAL = {extras = ["numpy"], version = "^3.8.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
